# HIDSlave

./: .gitignore
btdump/: README  connection  connection-wo-aut  hidd-search  mouse  mouse-clic1  mouse-clic2
hello-jni/: AndroidManifest.xml
hello-jni/dump/: droidHID  stuffkeys
hello-jni/jni/: Android.mk  hello-jni.c
hello-jni/jni/bluetooth/: sdp_lib.h
hello-jni/libs/armeabi/: gdb.setup
hello-jni/src/com/example/hellojni/: HelloJni.java
l2capServer/: .cproject  .project  main.c
l2capServer/Debug/: l2capServer  makefile  objects.mk  sources.mk  subdir.mk
libhidroid/: .project  AndroidManifest.xml
libhidroid/.externalToolBuilders/: Android Native Sources.launch
libhidroid/jni/: Android.mk  l2capInputStream.c  l2capOutputStream.c  l2capSocket.c
libhidroid/jni/l2cap/: L2capInputStream.c  L2capOutputStream.c  L2capSocket.c  hidp.c
libhidroid/jni/utils/: throw.c  throw.h
libhidroid/res/layout/: main.xml
libhidroid/res/values/: strings.xml
libhidroid/src/android/bluetooth/: BluetoothProfile.java
libhidroid/src/net/hidroid/: L2capSocket.java  L2capTester.java  SetupActivity.java  TestActivity.java
libhidroid/src/net/hidroid/hidp/: BluetoothHidp.java  HidpSockOptSetter.java
libhidroid/src/net/hidroid/l2cap/: L2capDatagramSocket.java  L2capInputStream.java  L2capOutputStream.java  L2capSeqPacketSocket.java  L2capSocket.java  L2capStreamSocket.java  NativeSocket.java
libhidroid_test/: .classpath  .project  AndroidManifest.xml  default.properties
libhidroid_test/res/layout/: setup.xml  test.xml
libhidroid_test/res/values/: strings.xml
libhidroid_test/src/net/hidroid/test/core/: HIDASCIITranslator.java  KeyboardHidTester.java  L2capTester.java  RawHidTester.java  Tester.java
libhidroid_test/src/net/hidroid/test/gui/: L2capTestSetupActivity.java
libhidroid_test/src/net/hidroid/test/l2cap/: L2capTestActivity.java  L2capTestSetupActivity.java  L2capTester.java
sdp-test/: Makefile  hidcd.c  hidcd.h  l2cap.c  l2cap.h  main.c  regServ  regServ.c  sdp-test  sdp.c  sdp.h
sdp-test/old/: findServ.c  regServ  regServ.c
sdp-test/stuffkeys/: stuffkeys  stuffkeys.c
simplescan/: simplescan  simplescan.c
xkbdbthid-0.1/: COPYING  Makefile  README  osso-xkbdbthid.desktop
xkbdbthid-0.1/bthid/: en_US.qwerty.xkbd
xkbdbthid-0.1/bthid/img/: kbd.xpm
xkbdbthid-0.1/bthid/xkbdbthidwrapper/: Makefile  xkbdbthid.sh  xkbdbthidwrapper  xkbdbthidwrapper.c
xkbdbthid-0.1/xkbd-0.8.15_bthid/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.bthid  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  xkbd.desktop
xkbdbthid-0.1/xkbd-0.8.15_bthid/autom4te.cache/: output.0  requests  traces.0
xkbdbthid-0.1/xkbd-0.8.15_bthid/data/: Makefile  Makefile.am  Makefile.in  en_GB.qwerty.tabletpc.xkbd.in  en_GB.qwerty.tiny.xkbd.in  en_GB.qwerty.xkbd.in  en_US.qwerty.xkbd.in  en_all.fitaly.xkbd.in  kbdconfig.numsonly.in
xkbdbthid-0.1/xkbd-0.8.15_bthid/data/img/: Makefile  Makefile.am  Makefile.in  backspace.xpm  return.xpm  shift.xpm  tab.xpm
xkbdbthid-0.1/xkbd-0.8.15_bthid/doc/: Makefile  Makefile.am  Makefile.in  docbook.dsl  style.css  xkbd.1.in
xkbdbthid-0.1/xkbd-0.8.15_bthid/packaging/: Makefile  Makefile.am  Makefile.in
xkbdbthid-0.1/xkbd-0.8.15_bthid/packaging/ipkg/: 90xXkbd  Makefile  Makefile.am  Makefile.in  control  control.in  menu.in  postinst  postrm
xkbdbthid-0.1/xkbd-0.8.15_bthid/src/: Makefile  Makefile.am  Makefile.in  box.c  box.h  button.c  button.h  hid.h  hidcd.c  kb.c  kb.h  libXkbd.c  libXkbd.h  libvirtkeys.c  libvirtkeys.h  makefile  sdp.c  sdp.h  structs.h  xkbd.c
